--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -1544,6 +1544,7 @@ li a.menuLi {
   font-size: 20px;
 }
 .title {
+  color: #000;
   padding: 0px;
   margin-top: 7px;
   margin-bottom: 0px;
